Update build script to match latest gradle version