@@ -12,7 +12,7 @@ buildscript {
 plugins {
     id "com.diffplug.eclipse.apt" version "3.28.0"
     id "io.micronaut.library" version '1.5.0'
-    id "org.sonarqube" version "3.1.1"
+    id "org.sonarqube" version "3.2.0"
     id 'io.franzbecker.gradle-lombok' version '4.0.0'
     id 'jacoco'
 }
@@ -23,7 +23,6 @@ allprojects {
     apply plugin: 'java'
     apply plugin: 'signing'
     apply plugin: 'maven-publish'
-    apply plugin: 'application'
 
     repositories {
         mavenCentral()
@@ -52,8 +51,6 @@ allprojects {
         }
     }
 
-    mainClassName = "com.jongsoft.finance.Application"
-
     dependencies {
         annotationProcessor "org.projectlombok:lombok:$lombokVersion"
         compileOnly "org.projectlombok:lombok:$lombokVersion"
@@ -63,24 +60,16 @@ allprojects {
 }
 
 subprojects {
-    apply plugin: 'io.micronaut.application'
-    apply plugin: "com.diffplug.eclipse.apt"
     apply plugin: 'jacoco'
     apply plugin: 'io.franzbecker.gradle-lombok'
 
-    task delombok(type: DelombokTask, dependsOn: compileJava) {
-        ext.outputDir = file("$buildDir/delombok")
-        outputs.dir(outputDir)
-        sourceSets.main.java.srcDirs.each {
-            inputs.dir(it)
-            args(it, "-d", outputDir)
-        }
-        doFirst {
-            outputDir.deleteDir()
-        }
-    }
+    /**
+     * Compiler configuration
+     */
 
     java {
+        compileJava.options.encoding = 'UTF-8'
+
         withJavadocJar()
         withSourcesJar()
     }
@@ -95,13 +84,48 @@ subprojects {
         }
     }
 
+    /**
+     * Test configuration Section
+     */
     test {
-        useJUnitPlatform()
+        finalizedBy jacocoTestReport
     }
 
-    configurations {
-        // for dependencies that are needed for development only
-        developmentOnly
+    jacocoTestReport {
+        dependsOn test
+
+        reports {
+            xml.enabled true
+            csv.enabled false
+            html.enabled false
+        }
+    }
+
+    jacocoTestCoverageVerification {
+        violationRules {
+            rule {
+                limit {
+                    minimum = 0.6
+                }
+            }
+        }
+    }
+
+    /**
+     * Publishing configuration
+     */
+
+    task delombok(type: DelombokTask, dependsOn: compileJava) {
+        enabled = isReleaseVersion
+        ext.outputDir = file("$buildDir/delombok")
+        outputs.dir(outputDir)
+        sourceSets.main.java.srcDirs.each {
+            inputs.dir(it)
+            args(it, "-d", outputDir)
+        }
+        doFirst {
+            outputDir.deleteDir()
+        }
     }
 
     javadoc {
@@ -159,52 +183,6 @@ subprojects {
 
     signing {
         sign publishing.publications.mavenJava
-    }
-
-    plugins.withType(JavaPlugin) {
-        java {
-            modularity.inferModulePath = true
-        }
-    }
-
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
-        options.compilerArgs.addAll([
-                '-parameters',
-                //'--enable-preview',
-                // enables incremental compilation
-                '-Amicronaut.processing.incremental=true',
-                '-Amicronaut.processing.annotations=com.jongsoft.finance.*',
-                "-Amicronaut.processing.group=$project.group",
-                "-Amicronaut.processing.module=$project.name"
-        ])
-    }
-
-    tasks.withType(JavaExec) {
-        classpath += configurations.developmentOnly
-        jvmArgs('-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
-        if (gradle.startParameter.continuous) {
-            systemProperties(
-                    'micronaut.io.watch.restart':'true',
-                    'micronaut.io.watch.enabled':'true',
-                    "micronaut.io.watch.paths":"src/main"
-            )
-        }
-    }
-
-    tasks.withType(JacocoReport) {
-        executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
-
-        subprojects.each {
-            sourceSets it.sourceSets.main
-        }
-
-        reports {
-            xml.enabled true
-            xml.destination file("${buildDir}/reports/jacoco/report.xml")
-            html.enabled false
-            csv.enabled false
-        }
     }
 
     dependencies {
